# LectureGraphQL

./: .flake8  README.md  makefile  pyproject.toml  schema_export.py
app/: main.py
app/core/: config.py
app/db/: authors.json  books.json
app/graphql/: converters.py  validation.py
app/graphql/authors/: queries.py  responses.py  schemas.py  service.py  types.py
app/graphql/books/: queries.py  responses.py  schemas.py  service.py  types.py
tests/: conftest.py  factories.py
tests/graphql/: test_authors.py  test_books.py
